--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3452,7 +3452,7 @@ input, select, textarea {
 	#banner {
 		background-attachment: fixed;
 		background-color: #272833;
-		background-image: url("../../images/banner_test.jpg");
+		background-image: url("../../images/Panorama_of_the_Whale_Galaxy.jpg");
 		background-position: center center;
 		background-size: cover;
 		box-shadow: 0 0.25em 0.5em 0 rgba(0, 0, 0, 0.25);
