--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2470,7 +2470,7 @@ input, select, textarea {
 			}
 
 		.icon.major {
-			background: #d5d8f5;
+			background: #272833;
 			border-radius: 100%;
 			cursor: default;
 			display: inline-block;
@@ -2503,7 +2503,7 @@ input, select, textarea {
 				}
 
 				.icon.major.alt:before {
-					color: #d5d8f5 !important;
+					color: #272833 !important;
 					text-shadow: 1px 0 0 #ffffff, -1px 0 0 #ffffff, 0 1px 0 #ffffff, 0 -1px 0 #ffffff;
 				}
 
@@ -3353,7 +3353,7 @@ input, select, textarea {
 				-webkit-transform: rotate(45deg);
 				-ms-transform: rotate(45deg);
 				transform: rotate(45deg);
-				background: #d5d8f5;
+				background: #272833;
 				content: '';
 				display: block;
 				height: 1em;
@@ -3451,7 +3451,7 @@ input, select, textarea {
 
 	#banner {
 		background-attachment: fixed;
-		background-color: #d5d8f5;
+		background-color: #272833;
 		background-image: url("../../images/Panorama_of_the_Whale_Galaxy.jpg");
 		background-position: center center;
 		background-size: cover;
@@ -3533,7 +3533,7 @@ input, select, textarea {
 /* Footer */
 
 	#footer {
-		background: #d5d8f5;
+		background: #272833;
 		padding: 6em 0;
 		text-align: center;
 	}
@@ -3556,7 +3556,7 @@ input, select, textarea {
 			}
 
 			#footer .icons .icon.alt:before {
-				color: #d5d8f5 !important;
+				color: #272833 !important;
 				text-shadow: 1px 0 0 rgba(255, 255, 255, 0.5), -1px 0 0 rgba(255, 255, 255, 0.5), 0 1px 0 rgba(255, 255, 255, 0.5), 0 -1px 0 rgba(255, 255, 255, 0.5);
 			}
 
@@ -3888,7 +3888,7 @@ input, select, textarea {
 				top: 0;
 				width: 100%;
 				z-index: 10001;
-				background: #d5d8f5;
+				background: #272833;
 				box-shadow: 0 0.125em 0.125em 0 rgba(0, 0, 0, 0.125);
 			}
 
